--- a/.github/workflows/build-tms-ci.yml
+++ b/.github/workflows/build-tms-ci.yml
@@ -3,7 +3,7 @@ name: Build and Push ticketManagementService Docker Image to AWS ECR
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'services/ticketManagementService/**'
 
@@ -36,10 +36,10 @@ jobs:
 
       - name: Build and Tag Docker Image
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:accountManagementService-latest ./services/accountManagementService
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:accountManagementService-latest $ECR_REGISTRY/$ECR_REPOSITORY:accountManagementService-${{ github.sha }}
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:ticketManagementService-latest ./services/ticketManagementService
+          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:ticketManagementService-latest $ECR_REGISTRY/$ECR_REPOSITORY:ticketManagementService-${{ github.sha }}
 
       - name: Push Images to AWS ECR
         run: |
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:accountManagementService-latest
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:accountManagementService-${{ github.sha }}
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:ticketManagementService-latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:ticketManagementService-${{ github.sha }}
