IS2-40 Event Cover Image Upload functionality with s3
- Provisioned s3 via terraform
- commit also includes ECR terraform

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -216,6 +216,8 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+    environment:
+      RABBITMQ_ERLANG_COOKIE: "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
     healthcheck:
       test: ["CMD", "rabbitmqctl", "status"]
       interval: 10s
