--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.5.2",
+    "@aws-amplify/auth": "^6.0.14",
     "@aws-amplify/core": "^6.10.4",
+    "@aws-sdk/client-s3": "^3.777.0",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -29,7 +31,7 @@
     "@stripe/stripe-js": "^6.1.0",
     "@types/google.maps": "^3.58.1",
     "@types/stripe": "^8.0.417",
-    "aws-amplify": "^6.13.2",
+    "aws-amplify": "^6.0.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
