--- a/services/createEventService/src/main/resources/application.properties
+++ b/services/createEventService/src/main/resources/application.properties
@@ -25,6 +25,13 @@ aws.cognito.region=${AWS_REGION}
 aws.cognito.user-pool-id=${AWS_COGNITO_USER_POOL_ID}
 aws.cognito.app-client-id=${AWS_COGNITO_APP_CLIENT_ID}
 
+# Prometheus Metrics Configuration
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.metrics.tags.application=${spring.application.name}
+
 #frontend.url=http://localhost:3000
 #user-management.microservice.url=http://localhost:8080
 #billing.microservice.url=http://localhost-changethis:8001
