--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -444,6 +444,77 @@ services:
       - ./grafana/dashboards:/var/lib/grafana/dashboards
     networks:
       - default
+  
+  #Kong Database
+  kong-database:
+    image: postgres:16.2
+    container_name: kong-database
+    restart: always
+    environment:
+        POSTGRES_DB: kong
+        POSTGRES_USER: kong
+        POSTGRES_PASSWORD: kongpass
+    ports:
+        - "5438:5432"
+    healthcheck:
+        test: ["CMD", "pg_isready", "-U", "kong"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+    volumes:
+          - kong-data:/var/lib/postgresql/data
+    networks:
+      - default
+  
+  #Kong Migration
+  kong-migration:
+    image: kong:3.5
+    container_name: kong-migration
+    command: "kong migrations bootstrap"
+    restart: on-failure
+    networks:
+      - default
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kongpass
+    depends_on:
+      kong-database:
+        condition: service_healthy
+  
+  #Kong Gateway
+  kong:
+    image: kong:3.5
+    container_name: kong-gateway
+    restart: always
+    networks:
+      - default
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kongpass
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_LISTEN: 0.0.0.0:8101
+      KONG_ADMIN_GUI_URL: http://localhost:8102
+    depends_on:
+      kong-migration:
+        condition: service_completed_successfully
+    ports:
+      - "8100:8000" # Kong proxy port
+      - "8101:8001" # Kong admin API
+      - "8102:8002" # Kong admin GUI
+      - "8443:8443" # Kong proxy SSL port
+      - "8444:8444" # Kong admin SSL port
+    healthcheck:
+      test: ["CMD", "kong", "health"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
 
 volumes:
   users-db-data:
@@ -452,7 +523,7 @@ volumes:
   events-db-data:
   billing-db-data:
   grafana-data:
-
+  kong-data: 
 networks:
   default:
     name: IS213-project-default
