--- a/.github/workflows/build-ces-ci.yml
+++ b/.github/workflows/build-ces-ci.yml
@@ -1,11 +1,11 @@
-name: Build and Push createEventsService Docker Image to AWS ECR
+name: Build and Push createEventService Docker Image to AWS ECR
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'services/createEventsService/**'
+      - 'services/createEventService/**'
 
   workflow_dispatch: # This enables the manual run button 
 
