--- a/services/bookingService/Dockerfile
+++ b/services/bookingService/Dockerfile
@@ -22,7 +22,7 @@ RUN useradd -m appuser && chown -R appuser:appuser /app
 USER appuser
 
 # Expose the port the app runs on
-EXPOSE 8002
+# EXPOSE 8002
 
 # Command to run the application
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8002"]
