--- a/services/billingService/Dockerfile
+++ b/services/billingService/Dockerfile
@@ -25,6 +25,10 @@ RUN apt-get update && apt-get install -y \
     gcc \
     && rm -rf /var/lib/apt/lists/*
 
+# Install pip build tools to avoid bdist_wheel errors
+RUN pip install --upgrade pip wheel setuptools
+
+
 # Copy the dependencies file and install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
