--- a/services/ticketManagementService/Dockerfile
+++ b/services/ticketManagementService/Dockerfile
@@ -10,6 +10,9 @@ RUN apt-get update && apt-get install -y \
     gcc \
     && rm -rf /var/lib/apt/lists/*
 
+# Install pip build tools to avoid bdist_wheel errors
+RUN pip install --upgrade pip wheel setuptools
+
 # Copy requirements first to leverage Docker cache
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
