--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -218,7 +218,13 @@ services:
       - "5672:5672"
       - "15672:15672"
     environment:
-      RABBITMQ_ERLANG_COOKIE: "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
+      RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
+      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASS}"
+      RABBITMQ_DEFAULT_VHOST: "/"
+      RABBITMQ_NODENAME: "rabbit@rabbitmq"
+      RABBITMQ_ERLANG_COOKIE: "CHANGEMECHANGEMECHANGEMECHANGEME"
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq
     healthcheck:
       test: ["CMD", "rabbitmqctl", "status"]
       interval: 10s
@@ -468,22 +474,21 @@ services:
     networks:
       - default
 
-  #Kong Migration
-  kong-migration:
-    image: kong:3.5
-    container_name: kong-migration
-    command: "kong migrations bootstrap"
-    restart: on-failure
-    networks:
-      - default
-    environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
-      KONG_PG_USER: kong
-      KONG_PG_PASSWORD: kongpass
-    depends_on:
-      kong-database:
-        condition: service_healthy
+  # #Kong Migration
+  # kong-migration:
+  #   image: kong:3.5
+  #   container_name: kong-migration
+  #   environment:
+  #     KONG_DATABASE: postgres
+  #     KONG_PG_HOST: kong-database
+  #     KONG_PG_USER: kong
+  #     KONG_PG_PASSWORD: kongpass
+  #   command: kong migrations bootstrap
+  #   depends_on:
+  #     kong-database:
+  #       condition: service_healthy
+  #   networks:
+  #     - default
 
   #Kong Gateway
   kong:
@@ -501,10 +506,9 @@ services:
       KONG_ADMIN_ACCESS_LOG: /dev/stdout
       KONG_PROXY_ERROR_LOG: /dev/stderr
       KONG_ADMIN_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_LISTEN: 0.0.0.0:8001 # This is important - internal port
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001
       KONG_ADMIN_GUI_URL: http://localhost:8102
-      # Add these lines to ensure Admin API is accessible
-      KONG_ADMIN_GUI_LISTEN: 0.0.0.0:8002 # Internal port
+      KONG_ADMIN_GUI_LISTEN: 0.0.0.0:8002
       KONG_ADMIN_GUI_ACCESS_LOG: /dev/stdout
       KONG_ADMIN_GUI_ERROR_LOG: /dev/stderr
       KONG_ADMIN_GUI: "on"
@@ -516,10 +520,13 @@ services:
       KONG_ADMIN_CORS_EXPOSED_HEADERS: "X-Kong-Admin-Request-ID"
       KONG_ADMIN_CORS_CREDENTIALS: "true"
       KONG_ADMIN_CORS_MAX_AGE: "3600"
-
-    depends_on:
-      kong-migration:
-        condition: service_completed_successfully
+      KONG_DECLARATIVE_CONFIG: /kong/declarative/kong.yml
+      KONG_DECLARATIVE_CONFIG_STRING: |
+        _format_version: "3.0"
+        _transform: true
+    # depends_on:
+    #   kong-migration:
+    #     condition: service_completed_successfully
     ports:
       - "8100:8000" # Kong proxy port
       - "8101:8001" # Kong admin API
@@ -548,6 +555,7 @@ volumes:
   billing-db-data:
   grafana-data:
   kong-data:
+  rabbitmq-data:
 networks:
   default:
     name: IS213-project-default
