feta onboard kong for most routes

--- a/.example.env
+++ b/.example.env
@@ -61,3 +61,6 @@ CREATE_EVENT_SERVICE_URL=http://create-event-service:8070
 # S3
 S3_BUCKET_NAME=YOUR_BUCKET_NAME_HERE
 S3_BUCKET_BASE_URL=YOUR_URL_HERE
+
+# KONG
+KONG_GATEWAY_URL=YOUR_KONG_INGRESS_URL_HERE
