--- a/kong/declarative/kong.yml
+++ b/kong/declarative/kong.yml
@@ -59,6 +59,16 @@ services:
           - DELETE
           - OPTIONS
         strip_path: false
+      - name: ticket-management-booking-mgmt-route
+        paths:
+          - "~/api/v1/mgmt/bookings(/.*)?"
+        methods:
+          - GET
+          - POST
+          - PUT
+          - DELETE
+          - OPTIONS
+        strip_path: false
     plugins:
       - name: rate-limiting
         config:
